add: script for feature generation

--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "generate:feature": "node scripts/generate-feature.js"
   },
   "dependencies": {
     "@date-io/dayjs": "^3.2.0",
